added project profile get endpoint
